@@ -256,6 +256,28 @@ Individual columns can be overridden with explicit values when reflecting tables
     ... Column('mydata', Unicode(50)),    # override reflected 'mydata' to be Unicode
     ... autoload=True)
 
+Reflecting Views
+~~~~~~~~~~~~~~~~
+
+The reflection system can also reflect views.   Basic usage is the same as that of a table::
+
+    my_view = Table("some_view", metadata, autoload=True)
+    
+Above, ``my_view`` is a ``Table`` object with ``Column`` objects representing the names and types
+of each column within the view "some_view".
+
+Usually, it's desired to have at least a primary key constraint when reflecting a view, if not
+foreign keys as well.  View reflection doesn't extrapolate these constraints.
+
+Use the "override" technique for this, specifying explicitly those columns
+which are part of the primary key or have foreign key constraints::
+
+    my_view = Table("some_view", metadata, 
+                    Column("view_id", Integer, primary_key=True),
+                    Column("related_thing", Integer, ForeignKey("othertable.thing_id")),
+                    autoload=True
+    )
+
 Reflecting All Tables at Once 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
